[package]
name = "music-suggestions"
version = "0.1.0"
edition = "2024"

[dependencies]
convert_case = "0.8.0"
dirs = "6.0.0"
eyre = "0.6.12"
musicbrainz_rs = { version = "0.12.0", features = ["rustls"] }
serde = { version = "1.0.219", features = ["derive"] }
tiny_http = "0.12.0"
tokio = { version = "1.46.1", features = ["full"] }
toml = "0.9.1"
uri-rs = { git = "https://github.com/El-Wumbus/uri-rs", version = "0.1.0" }
