[package]
name = "music-suggestions"
version = "0.1.0"
edition = "2024"

[profile.release]
debug = false
strip = true
lto = "thin"

[dependencies]
dirs = "6.0.0"
eyre = "0.6.12"
hyper = { version = "1.6.0", default-features = false }
musicbrainz_rs = { version = "0.12.0", default-features = false, features = ["rustls", "blocking"] }
reqwest = { version = "0.12.22", default-features = false }
serde = { version = "1.0.219", features = ["derive"] }
tiny_http = "0.12.0"
toml = "0.9.1"
uri-rs = { git = "https://github.com/El-Wumbus/uri-rs", version = "0.1.0" }
