[package]
name = "website"
version = "0.2.0"
edition = "2024"

[profile.release]
debug = false
strip = true
lto = "thin"

[dependencies]
ahash = { version = "0.8.12", features = ["compile-time-rng"] }
chrono = { version = "0.4.41", features = ["serde"] }
dirs = "6.0.0"
env_logger = "0.11.8"
eyre = "0.6.12"
indoc = "2.0.6"
log = "0.4.27"
musicbrainz_rs = { version = "0.12.0", default-features = false, features = ["rustls", "blocking"] }
pulldown-cmark = { version = "0.13.0", features = ["simd"] }
reqwest = { version = "0.12.22", default-features = false }
serde = { version = "1.0.219", features = ["derive"] }
syntect = "5.2.0"
tiny_http = "0.12.0"
toml = "0.9.1"
uri-rs = { git = "https://github.com/El-Wumbus/uri-rs", version = "0.1.0" }
